Feature/match payload fix (#268)
* referencing match.group instead of match[]. it's supported in later python versions but not 2.7

--- a/eng/pipelines/templates/scripts/replace-relative-links.yml
+++ b/eng/pipelines/templates/scripts/replace-relative-links.yml
@@ -35,9 +35,10 @@ steps:
 
             for root, dirs, files in os.walk(directory):
                 for file in files:
-                    if file.lower() == 'readme.md':
+                    if file.lower() == "readme.md":
                         readme_set.append(os.path.join(root, file))
             return readme_set
+
 
         def is_relative_link(link_value, readme_location):
             try:
@@ -49,7 +50,7 @@ steps:
 
 
         def replace_relative_link(match, readme_location, root_folder, build_sha, repo_id):
-            link_path = match[2]
+            link_path = match.group(2)
 
             if is_relative_link(link_path, readme_location):
                 # if it is a relative reference, we need to find the path from the root of the repository
@@ -64,9 +65,9 @@ steps:
                     target_resource_path=placement_from_root,
                 ).replace("\\", "/")
 
-                return "[{}]({})".format(match[1], updated_link)
+                return "[{}]({})".format(match.group(1), updated_link)
             else:
-                return match[0]
+                return match.group(0)
 
 
         def transfer_content_to_absolute_references(
@@ -93,8 +94,7 @@ steps:
                 "--target",
                 dest="target_folder",
                 help="The target folder that contains a README ",
-
-                default = "${{ parameters.TargetFolder }}"
+                default="${{ parameters.TargetFolder }}",
             )
 
             parser.add_argument(
@@ -102,8 +102,7 @@ steps:
                 "--repoid",
                 dest="repo_id",
                 help='The target repository used as the base for the path replacement. Full Id, example: "Azure/azure-sdk-for-net"',
-
-                default = "${{ parameters.RootFolder }}"
+                default="${{ parameters.RootFolder }}",
             )
 
             parser.add_argument(
@@ -111,8 +110,7 @@ steps:
                 "--root",
                 dest="root_folder",
                 help="The root directory of the repository. This gives us the ability to rationalize links in situations where a relative link traverses UPWARDS from the readme.",
-
-                default = "${{ parameters.BuildSHA }}"
+                default="${{ parameters.BuildSHA }}",
             )
 
             parser.add_argument(
@@ -120,8 +118,7 @@ steps:
                 "--sha",
                 dest="build_sha",
                 help="The commit hash associated with this change. Using this will mean that links will never be broken.",
-
-                default = "${{ parameters.RepoId }}"
+                default="${{ parameters.RepoId }}",
             )
 
             args = parser.parse_args()
@@ -130,7 +127,9 @@ steps:
 
             for readme_location in readme_files:
                 try:
-                    logging.info("Running Relative Link Replacement on {}.".format(readme_location))
+                    logging.info(
+                        "Running Relative Link Replacement on {}.".format(readme_location)
+                    )
 
                     with open(readme_location, "r", encoding="utf-8") as readme_stream:
                         readme_content = readme_stream.read()
