transferring updates to the yaml

--- a/eng/pipelines/templates/scripts/replace-relative-links.yml
+++ b/eng/pipelines/templates/scripts/replace-relative-links.yml
@@ -27,8 +27,9 @@ steps:
         RELATIVE_LINK_REPLACEMENT_SYNTAX = (
             "https://github.com/{repo_id}/tree/{build_sha}/{target_resource_path}"
         )
-        LINK_DISCOVERY_REGEX = r"\[([^\]]*)\]\(([^)]*)\)"
 
+        LINK_DISCOVERY_REGEX = r"\[([^\]]*)\]\(([^)]*)\)"
+        PREDEFINED_LINK_DISCOVERY_REGEX = r"(\[[^\]]*]\:)\s*([^\s]+)"
 
         def locate_readmes(directory):
             readme_set = []
@@ -43,14 +44,14 @@ steps:
         def is_relative_link(link_value, readme_location):
             try:
                 return os.path.isfile(
-                    os.path.join(os.path.dirname(readme_location), link_value)
+                    os.path.abspath(os.path.join(os.path.dirname(readme_location), link_value))
                 )
             except:
                 return False
 
 
         def replace_relative_link(match, readme_location, root_folder, build_sha, repo_id):
-            link_path = match.group(2)
+            link_path = match.group(2).strip()
 
             if is_relative_link(link_path, readme_location):
                 # if it is a relative reference, we need to find the path from the root of the repository
@@ -69,6 +70,26 @@ steps:
             else:
                 return match.group(0)
 
+        def replace_prefined_relative_links(match, readme_location, root_folder, build_sha, repo_id):
+            link_path = match.group(2).strip()
+
+            if is_relative_link(link_path, readme_location):
+                # if it is a relative reference, we need to find the path from the root of the repository
+                resource_absolute_path = os.path.abspath(
+                    os.path.join(os.path.dirname(readme_location), link_path)
+                )
+                placement_from_root = os.path.relpath(resource_absolute_path, root_folder)
+
+                updated_link = RELATIVE_LINK_REPLACEMENT_SYNTAX.format(
+                    repo_id=repo_id,
+                    build_sha=build_sha,
+                    target_resource_path=placement_from_root,
+                ).replace("\\", "/")
+
+                return "{} {}".format(match.group(1), updated_link)
+            else:
+                return match.group(0)
+
 
         def transfer_content_to_absolute_references(
             root_folder, build_sha, repo_id, readme_location, content
@@ -76,6 +97,14 @@ steps:
             content = re.sub(
                 LINK_DISCOVERY_REGEX,
                 lambda match, readme_location=readme_location, root_folder=root_folder, build_sha=build_sha, repo_id=repo_id: replace_relative_link(
+                    match, readme_location, root_folder, build_sha, repo_id
+                ),
+                content,
+            )
+
+            content = re.sub(
+                PREDEFINED_LINK_DISCOVERY_REGEX,
+                lambda match, readme_location=readme_location, root_folder=root_folder, build_sha=build_sha, repo_id=repo_id: replace_prefined_relative_links(
                     match, readme_location, root_folder, build_sha, repo_id
                 ),
                 content,
@@ -102,7 +131,7 @@ steps:
                 "--repoid",
                 dest="repo_id",
                 help='The target repository used as the base for the path replacement. Full Id, example: "Azure/azure-sdk-for-net"',
-                default="${{ parameters.RootFolder }}",
+                default="${{ parameters.RepoId }}",
             )
 
             parser.add_argument(
@@ -110,7 +139,7 @@ steps:
                 "--root",
                 dest="root_folder",
                 help="The root directory of the repository. This gives us the ability to rationalize links in situations where a relative link traverses UPWARDS from the readme.",
-                default="${{ parameters.BuildSHA }}",
+                default="${{ parameters.RootFolder }}",
             )
 
             parser.add_argument(
@@ -118,7 +147,7 @@ steps:
                 "--sha",
                 dest="build_sha",
                 help="The commit hash associated with this change. Using this will mean that links will never be broken.",
-                default="${{ parameters.RepoId }}",
+                default="${{ parameters.BuildSHA }}",
             )
 
             args = parser.parse_args()
@@ -142,8 +171,9 @@ steps:
                         readme_content,
                     )
 
-                    with open(readme_location, "w") as readme_stream:
+                    with open(readme_location, "w", encoding="utf-8") as readme_stream:
                         readme_stream.write(new_content)
+                        
                 except Exception as e:
                     logging.error(e)
                     exit(1)
