--- a/eng/pipelines/templates/scripts/replace-relative-links.yml
+++ b/eng/pipelines/templates/scripts/replace-relative-links.yml
@@ -43,7 +43,7 @@ steps:
 
         def is_relative_link(link_value, readme_location):
             try:
-                return os.path.isfile(
+                return os.path.exists(
                     os.path.abspath(os.path.join(os.path.dirname(readme_location), link_value))
                 )
             except:
@@ -151,6 +151,11 @@ steps:
             )
 
             args = parser.parse_args()
+
+            logging.info("Root Folder: {}".format(args.root_folder))
+            logging.info("Target Folder: {}".format(args.target_folder))
+            logging.info("Repository Id: {}".format(args.repo_id))
+            logging.info("Build SHA: {}".format(args.build_sha))
 
             readme_files = locate_readmes(args.target_folder)
 
