--- a/.azure-pipelines/warden.yml
+++ b/.azure-pipelines/warden.yml
@@ -83,12 +83,12 @@ jobs:
     displayName: 'Install doc-warden'
 
   - script: |
-      ward scan -d $(Build.SourcesDirectory)/sdk-for-java  -c $(Build.SourcesDirectory)/sdk-for-java/eng/.docsettings.yml -o
-    displayName: 'Ensure Java Backwards Compat'
+      ward scan -d $(Build.SourcesDirectory)/sdk-for-net  -c $(Build.SourcesDirectory)/sdk-for-net/eng/.docsettings.yml
+    displayName: 'Ensure .NET Backwards Compat'
 
   - script: |
-      ward scan -d $(Build.SourcesDirectory)/sdk-for-net  -c $(Build.SourcesDirectory)/sdk-for-net/eng/.docsettings.yml -o
-    displayName: 'Ensure .NET Backwards Compat'
+      ward scan -d $(Build.SourcesDirectory)/sdk-for-java  -c $(Build.SourcesDirectory)/sdk-for-java/eng/.docsettings.yml -o
+    displayName: 'Ensure Java Backwards Compat'
 
   - script: |
       ward scan -d $(Build.SourcesDirectory)/sdk-for-python -o
