- Attempt to fix nuget - Address PR comments

--- a/eng/Directory.Build.props
+++ b/eng/Directory.Build.props
@@ -48,7 +48,7 @@
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
     <Authors>Microsoft</Authors>
     <Product>Azure .NET SDK - Tools</Product>
-    <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</PackageIconUrl>
+    <PackageIcon>pkgicon.png</PackageIcon>
     <RepositoryUrl>https://github.com/Azure/azure-sdk-tools</RepositoryUrl>
     <PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
