--- a/src/dotnet/APIView/APIViewWeb/appsettings.json
+++ b/src/dotnet/APIView/APIViewWeb/appsettings.json
@@ -8,5 +8,5 @@
   "Github": {
     "RequiredOrganization": [ "Azure", "Microsoft" ]
   },
-  "EndPoint": "https://apiview.dev/"
+  "EndPoint": "https://apiview.dev"
 }
