--- a/tools/daily-dev-build-variable/daily-dev-build-variable.yml
+++ b/tools/daily-dev-build-variable/daily-dev-build-variable.yml
@@ -1,5 +1,5 @@
 # This script fragment is used across our repos to set a variable "SetDevVersion" which
-# is used when this pipeline is going to be generating and publishign daily dev builds.
+# is used when this pipeline is going to be generating and publishing daily dev builds.
 
 steps:
 - pwsh: |
