Migrate tests to roslyn test libraries

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,6 +3,7 @@
 	<packageSources>
 		<add key="NugetOfficialV3" value="https://api.nuget.org/v3/index.json" />
 		<add key="Local" value="tools/LocalNugetFeed" />
+		<add key="roslyn-analyzers" value="https://dotnet.myget.org/F/roslyn-analyzers/api/v3/index.json" />
 		<add key="AzArtifactsFeed" value="https://azuresdkartifacts.blob.core.windows.net/azure-sdk-tools/index.json" />
 	</packageSources>
 	
