Adjust regex to force content within link def (#403)
* update readme, changelog, and version for release
* enforce that there is content within the link location

--- a/eng/pipelines/templates/scripts/replace-relative-links.yml
+++ b/eng/pipelines/templates/scripts/replace-relative-links.yml
@@ -29,8 +29,8 @@ steps:
             "https://github.com/{repo_id}/tree/{build_sha}/{target_resource_path}"
         )
 
-        LINK_DISCOVERY_REGEX = r"\[([^\]]*)\]\(([^)]*)\)"
-        PREDEFINED_LINK_DISCOVERY_REGEX = r"(\[[^\]]*]\:)\s*([^\s]+)"
+        LINK_DISCOVERY_REGEX = r"\[([^\]]*)\]\(([^)]+)\)"
+        PREDEFINED_LINK_DISCOVERY_REGEX = r"(\[[^\]]+]\:)\s*([^\s]+)"
 
         IMAGE_FILE_EXTENSIONS = ['.jpeg', '.jpg', '.png', '.gif', '.tiff']
         RELATIVE_LINK_REPLACEMENT_SYNTAX_FOR_IMAGE = (
