--- a/eng/pipelines/templates/scripts/replace-relative-links.yml
+++ b/eng/pipelines/templates/scripts/replace-relative-links.yml
@@ -18,7 +18,7 @@ steps:
         import re
         import fnmatch
         from io import open
-        from pathlib import Path
+        from pathlib2 import Path
 
         # This script is intended to be run against a single folder. All readme.md files (regardless of casing) will have the relative links
         # updated with appropriate full reference links. This is a recursive update..
