Highlight Changes After Readme Update (#405)
* Adding Highlight Readme Updates step
* removing additional context to keep the git diff simple

--- a/eng/pipelines/templates/scripts/replace-relative-links.yml
+++ b/eng/pipelines/templates/scripts/replace-relative-links.yml
@@ -208,3 +208,7 @@ steps:
                 except Exception as e:
                     logging.error(e)
                     exit(1)
+
+  - script: |
+        git diff -U0
+    displayName: Highlight Readme Updates
