--- a/tools/CreateRuleFabricBot/CreateRuleFabricBot/CreateRuleFabricBot.csproj
+++ b/tools/CreateRuleFabricBot/CreateRuleFabricBot/CreateRuleFabricBot.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <NoWarn>CS8002;NU5105</NoWarn>
+
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>create-fabricbot-rule</ToolCommandName>
+    <VersionPrefix>1.0.0</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
