--- a/eng/common/pipelines/templates/steps/create-pull-request.yml
+++ b/eng/common/pipelines/templates/steps/create-pull-request.yml
@@ -36,7 +36,7 @@ steps:
   ignoreLASTEXITCODE: true
 
 - pwsh: |
-    ${{ ScriptDirectory }}/git-branch-push.ps1 `
+    ${{ parameters.ScriptDirectory }}/git-branch-push.ps1 `
       -PRBranchName "${{ parameters.PRBranchName }}" `
       -CommitMsg "${{ parameters.CommitMsg }}" `
       -GitUrl "https://$(azuresdk-github-pat)@github.com/${{ parameters.PROwner }}/${{ parameters.RepoName }}.git" `
@@ -47,7 +47,7 @@ steps:
   condition: and(succeeded(), eq(variables['HasChanges'], 'true'))
 
 - pwsh: |
-    ${{ ScriptDirectory }}/Submit-PullRequest.ps1 `
+    ${{ parameters.ScriptDirectory }}/Submit-PullRequest.ps1 `
       -RepoOwner "${{ parameters.RepoOwner }}" `
       -RepoName "${{ parameters.RepoName }}" `
       -BaseBranch "${{ parameters.BaseBranchName }}" `
